# backend/server/common/database.ts
@@ -1,0 +1,16 @@
+import { Product } from './interfaces';
+
+let id = 1;
+
+const products: Product[] = [
+  { id: id++, name: 'Soup', customerPrice: 199, cost: 186 },
+  { id: id++, name: 'Bread', customerPrice: 87, cost: 21 },
+  { id: id++, name: 'Cheese', customerPrice: 275, cost: 234 },
+  { id: id++, name: 'Milk', customerPrice: 67, cost: 61 },
+];
+
+function increaseId(): number {
+  return id++;
+}
+
+export { increaseId, products };
